# cartan

./: .clang-tidy  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  README.md  codecov.yml  idf_component.yml  library.properties  pyproject.toml
benchmarks/: CMakeLists.txt  README.md  basic_ik_dls_benchmarks.cpp  basic_ik_full_benchmarks.cpp  basic_ik_lm_benchmarks.cpp  basic_ik_sqp_benchmarks.cpp  benchmark_utils.h  closed_form_bench_utils.h  closed_form_ik_benchmarks.cpp  exhaustive_ik_full_benchmarks.cpp  fk_benchmarks.cpp  fk_comparison_benchmarks.cpp  fk_pinocchio_benchmarks.cpp  ik_comparison_benchmarks.cpp  ik_comparison_pinocchio_benchmarks.cpp  ik_dls_benchmarks.cpp  ik_full_benchmarks.cpp  ik_lm_benchmarks.cpp  ik_native_benchmarks.cpp  ik_sqp_benchmarks.cpp  ikfast_comparison_benchmarks.cpp  ikgeo_comparison_benchmarks.cpp  jacobian_benchmarks.cpp  jacobian_comparison_benchmarks.cpp  lie_group_benchmarks.cpp  nlopt_slsqp_per_pose_capture.cpp  opw_comparison_benchmarks.cpp  perf_fk_cartan_matrix_ur3e.cpp  perf_fk_cartan_ur3e.cpp  perf_fk_pinocchio_ur3e.cpp  slsqp_per_pose_capture.cpp  slsqp_per_pose_trace.cpp
docs/: CMakeLists.txt  README.md  benchmarks.md  getting-started.md  python.md
docs/api/: analytical.md  chain.md  frames.md  ik.md  kinematics.md  lie.md
docs/background/: frame-tags.md  ik-methods.md  jacobians.md  notation.md  null-space.md  poe-kinematics.md  se2.md  se3.md  so2.md  so3.md
docs/guides/: frame-tags-guide.md  ik-composition.md  poe-walkthrough.md
examples/: CMakeLists.txt  argmin_solvers.cpp  basic_ik.cpp  fk_jacobian.cpp  frame_safety.cpp  ik_composition.cpp  ik_service_multi.cpp  ik_service_single.cpp  lie_basics.cpp  nablapp_solvers.cpp
examples/tutorials/: 01_urdf_walkthrough.cpp  02_fk_and_jacobians.cpp  03_ik_composition.cpp  CMakeLists.txt
lib/: CMakeLists.txt
lib/cartan-analytical/: CMakeLists.txt
lib/cartan-analytical/include/cartan/: analytical.h
lib/cartan-lie/: CMakeLists.txt
lib/cartan-lie/cmake/: version.h.in
lib/cartan-lie/include/cartan/: expected.h  lie.h  types.h
lib/cartan-serial-chain/: CMakeLists.txt
lib/cartan-serial-chain/include/cartan/: serial_chain.h
lib/cartan-urdf/: CMakeLists.txt
lib/cartan-urdf/include/cartan/: urdf.h
lib/liepp-analytical/: CMakeLists.txt
lib/liepp-analytical/include/liepp/: analytical.h
lib/liepp-kinematics/: CMakeLists.txt
lib/liepp-kinematics/include/liepp/: kinematics.h
lib/liepp-lie/: CMakeLists.txt
lib/liepp-serial-chain/: CMakeLists.txt
lib/liepp-serial-chain/include/liepp/: serial_chain.h
profiling/: CMakeLists.txt  chain_factories.h  ik_profiling.cpp
python/: CMakeLists.txt
python/cartan/: __init__.py
python/src/: _core.cpp  cartan_bindings.cpp
python/src/bindings/: analytical_bindings.cpp  chain_bindings.cpp  exhaustive_bindings.cpp  fk_bindings.cpp  ik_bindings.cpp  lie_bindings.cpp  registrations.h  urdf_bindings.cpp
python/src/bindings/detail/: analytical_python_helpers.h  expected_caster.h  format_double.h  ik_python_helpers.h  urdf_python_error.h
python/tests/: _stubs_sample.py  conftest.py  test_analytical.py  test_argmin.py  test_example_counterparts.py  test_exhaustive.py  test_ik.py  test_ik_parity.py  test_ik_threading.py  test_kinematics.py  test_lie_groups.py  test_numpy_compat.py  test_stubs.py  test_tutorial_parity.py  test_urdf.py  test_wheel_smoke.py
python/tutorials/: 01_urdf_walkthrough.py  02_fk_and_jacobians.py  03_ik_composition.py
tests/: CMakeLists.txt  test_utils.h
tests/compile/: CMakeLists.txt  include_test.cpp  no_exceptions_factory_test.cpp
tests/compile/fail/: CMakeLists.txt  frame_mismatch_adjoint_twist.cpp  frame_mismatch_coadjoint_wrench.cpp  frame_mismatch_compose.cpp  frame_mismatch_inverse_compose.cpp
tests/embedded/arm-crosscompile/: representative_tu.cpp
tests/embedded/esp32-bench/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
tests/embedded/esp32-bench/main/: CMakeLists.txt  main.cpp
tests/embedded/esp32-smoke/: CMakeLists.txt  README.md  sdkconfig.defaults
tests/fixtures/: analytical_chains.h  chain_factories.h  opw_chains.h  prismatic_chains.h  redundant_chains.h
tests/fixtures/urdf/: adversarial_cycle.urdf  adversarial_duplicate_name.urdf  adversarial_multi_parent.urdf  adversarial_non_finite.urdf  adversarial_prismatic_no_limit.urdf  adversarial_revolute_no_limit.urdf  adversarial_self_loop.urdf  adversarial_zero_axis.urdf  cartanbot.urdf  extractor_branched.urdf  extractor_continuous_wrist.urdf  extractor_fixed_merge.urdf  extractor_serial_minimal.urdf  parser_mimic.urdf  parser_minimal.urdf  parser_unclosed.urdf  parser_unknown_joint.urdf  parser_unknown_parent.urdf  semantic_axis_omitted.urdf  semantic_continuous_no_limit.urdf
tests/fuzz/: CMakeLists.txt
tests/integration/consumer/: CMakeLists.txt  main.cpp
tests/property/: CMakeLists.txt  lie_group_axioms_test.cpp
tests/support/: alloc_counter.h
tests/unit/: CMakeLists.txt  abb_irb120_reconciliation_test.cpp  analytical_gradient_test.cpp  analytical_solver_2r_test.cpp  analytical_solver_3r_test.cpp  analytical_solver_6r_test.cpp  analytical_solver_opw_test.cpp  angle_unwrap_test.cpp  argmin_adapters_compile_test.cpp  argmin_policies_test.cpp  argmin_projected_gn_test.cpp  argmin_projected_gradient_gn_test.cpp  argmin_slsqp_restart_test.cpp  basic_ik_runner_test.cpp  basic_ik_solver_compile_test.cpp  basic_ik_solver_test.cpp  bobyqa_solve_policy_test.cpp  closest_to_seed_test.cpp  continuous_joint_fallback_sweep.cpp  default_solvers_test.cpp  dls_solve_policy_test.cpp  dls_test.cpp  exhaustive_ik_runner_test.cpp  expected_test.cpp  fk_sweep_test.cpp  forward_kinematics_test.cpp  framed_twist_test.cpp  framed_wrench_test.cpp  halton_seed_generator_test.cpp  hat_vee_test.cpp  ik_compile_test.cpp  ik_float_tolerance_sweep_test.cpp  ik_integration_test.cpp  ik_sweep_test.cpp  jacobian_compile_test.cpp  jacobian_sweep_test.cpp  jacobian_test.cpp  kdl_fk_comparison_test.cpp  kinematic_chain_test.cpp  lbfgsb_solve_policy_test.cpp  (+42 more)
(+240 files in other folders)
